--- a/intro.qmd
+++ b/intro.qmd
@@ -1,5 +1,54 @@
 # 课程项目简介
 
+本课程以项目驱动的形开展教学，每次课程围绕一个独立但相互关联的项目展开。所有项目可分为 4 个模块：
+
+-   环境搭建模块：在自己的电脑中搭建数据分析环境
+-   数据分析模块：使用 R 进行数据分析和可视化的基本操作
+-   人工智能模块：借助人工智能工具进行数据分析
+-   开发协作模块：与全世界开发者协作，开发自己的软件包
+
+
+::: {.callout-important}
+**重要提示**
+
+- 这是一门全新的课程，请同学们**多提宝贵意见**，参与课程完善的过程。
+- 这是一门进阶课，课程有一定难度，请同学们在课堂内外**多花有效时间**。
+- 这是一门实践课，请同学们一定要**在自己的电脑上成功运行**课程中教授的内容。
+- 这是一门 AI 课，请同学们在学习的过程中**主动寻求 AI 工具的帮助**。
+- 这是一门项目课，请同学们**结合自己的研究需求**深入的挖掘项目内容。
+:::
+
+
+环境搭建模块的项目内容包括：
+
+1.  电脑硬件和操作系统
+2.  可重复的数据分析环境
+3.  现代工具链
+
+
+数据分析模块的项目内容包括：
+
+1.  分组数据统计分析和可视化
+2.  转录组学数据分析和可视化
+3.  微生物组数据分析及可视化
+
+
+人工智能模块的项目内容包括：
+
+1.  调用通用大语言模型执行任务
+2.  机器学习算法及实现
+3.  手搓神经网络模型
+4.  利用拉曼光谱识别病原菌
+5.  计算机视觉辅助分析实验图片
+
+
+开发协作模块的项目内容包括：
+
+1.  与全世界开发者协作
+2.  开发 R 包
+
+下面，我们将逐一介绍这些项目的大概内容。
+
 ## 项目一：配置可重复的数据分析环境（2学时）
 
 ### 上手实操
@@ -84,7 +133,6 @@
 ### 课后作业
 
 -   请将代码整理成 PDF 文档，提交到我的文件收集中（使用坚果云收件箱二维码收作业）
-
 
 ## 项目五：大模型的API调用（4学时）
 
@@ -240,16 +288,5 @@
 
 -   写一个 R 包，并发布到 GitHub/Gitee 上
 
-## 项目十一：现代工具与展望（4学时）
 
--   Quarto文档系统
-    -   多语言支持
-    -   交互式文档
-    -   学术写作功能
-    -   发布与分享
--   项目实践与展示
-    -   完整项目规划
-    -   工作流程设计
-    -   文档体系建设
-    -   成果展示与分享
 
