--- a/linux-shell.qmd
+++ b/linux-shell.qmd
@@ -1,10 +1,12 @@
-# Linux 命令行入门
+# 命令行程序
 
-## 基础与背景
+与我们常用的有用户界面的 GUI 程序不同，在数据分析和编程领域，命令行程序是一种常见的工具。命令行程序通过文本输入和输出，提供了高效、灵活和可编程的操作方式，适用于自动化、批处理和远程管理等场景。现在，不管是在本地终端还是远程服务器，不管是在 Linux、macOS 还是 Windows 系统，命令行程序都是必不可少的工具。
 
-### Linux 操作系统与命令行
+本节将介绍几种在数据分析中常用的命令行程序的基本概念、常用命令和实用技巧，帮助用户更好地理解和使用命令行工具。
 
-Linux 是一类基于 Unix 的开源操作系统，其内核最初由 Linus Torvalds 于 1991 年发布。Linux 以其高效、稳定和灵活的特点，广泛应用于服务器、嵌入式系统以及个人电脑中。与图形界面相比，Linux 命令行界面（CLI）更适合进行批量处理、自动化脚本编写和远程管理。通过命令行，用户可以直接调用系统工具、执行复杂操作，这使得它成为系统管理员和开发者的强大助手。
+## Linux 命令行
+
+Shell 命令行是 Linux 系统的核心工具之一，它提供了用户与操作系统交互的接口。通过 Shell，用户可以输入命令、执行程序、管理文件和进程，实现系统管理和应用开发等功能。Shell 命令行具有高效、灵活和强大的特点，适用于各种场景，如系统管理、自动化脚本、远程连接等。
 
 例如，下面的命令展示了如何获取系统内核信息：
 
@@ -18,45 +20,13 @@ uname -a
 Linux ubuntu 5.15.0-88-generic #98-Ubuntu SMP Mon Oct 2 15:18:56 UTC 2023 x86_64 x86_64 x86_64 GNU/Linux
 ```
 
-### 为什么 Linux 命令行越来越流行
 
-随着云计算、DevOps 以及自动化运维的发展，Linux 命令行的重要性不断提升。命令行操作支持批量任务和脚本自动化，可以大幅提高工作效率；同时，许多现代工具和服务均提供命令行接口，使得跨平台管理成为可能。此外，命令行学习能够帮助开发者更好地理解系统底层原理，从而在问题排查和性能优化时更得心应手。总之，Linux 命令行以其简洁、直接和高效的特性，正越来越受到技术人员的青睐。
+随着云计算、DevOps 以及自动化运维的发展，Shell 命令行的重要性不断提升。命令行操作支持批量任务和脚本自动化，可以大幅提高工作效率；同时，许多现代工具和服务均提供命令行接口，使得跨平台管理成为可能。此外，命令行学习能够帮助开发者更好地理解系统底层原理，从而在问题排查和性能优化时更得心应手。
 
-### Linux 文件系统结构
-
-Linux和Windows的文件系统设计有一些显著的区别，主要体现在结构、灵活性和性能等方面。Linux文件系统设计在多样性、性能、安全性和可扩展性等方面具有明显优势。其开放源代码的特性使得用户可以根据具体需求进行高度定制，适用于各种不同的应用场景。
-
-其中，最直观的区别是Linux文件系统采用层级目录结构（如根目录/、/home、/etc等），而Windows则使用驱动器字母（如C:、D:）和文件路径。这种层级化设计使得Linux系统在文件管理上更加一致和易于维护，同时避免了Windows中的驱动器字母和路径名可能引发的混乱。
-
-Linux 文件系统采用树形结构，从根目录 `/` 开始，所有文件和目录均位于该根目录下。常见目录包括：
-
-- **`/bin` 和 `/sbin`**：存放系统启动和维护必需的命令和工具。
-- **`/etc`**：存放系统的配置文件，如网络配置、用户账号等。
-- **`/var`**：存放经常变化的数据，如日志文件和缓存。
-- **`/usr`**：存放系统应用程序和共享库文件。
-- **`/home`**：存放各个用户的个人文件和配置文件。
-
-理解这些目录的结构，有助于定位配置文件、管理日志以及维护系统安全。例如，可以使用以下命令查看 `/etc` 目录的内容：
-
-```bash
-ls -l /etc
-```
-
-运行后，会列出 `/etc` 中所有文件和子目录的详细信息，帮助用户了解系统配置的存放位置及相关权限设置。
-
-```plaintext
-total 28
-drwxr-xr-x 2 user user 4096 Feb  8 10:00 Documents
--rw-r--r-- 1 user user  123 Feb  8 10:01 file1.txt
--rwxr-xr-x 1 user user  456 Feb  8 10:02 script.sh
-drwxr-xr-x 4 user user 4096 Feb  8 10:03 src
-```
-
-## Linux 命令行基础
 
 ### 常用命令概述与演示
 
-Linux 命令通常由命令名称、选项和参数构成。无论是文件管理、进程监控还是网络配置，命令行都提供了直观而灵活的操作方式。命令行具有低资源消耗、脚本自动化、远程控制等优点，尤其适用于需要重复操作和批量处理的场景。
+Shell 命令通常由命令名称、选项和参数构成。无论是文件管理、进程监控还是网络配置，命令行都提供了直观而灵活的操作方式。命令行具有低资源消耗、脚本自动化、远程控制等优点，尤其适用于需要重复操作和批量处理的场景。
 
 例如，下面的命令使用 `echo` 输出一行文本到终端：
 
@@ -66,7 +36,7 @@ echo "Hello, Linux!"
 
 运行后，将直接在屏幕上显示 “Hello, Linux!”。这一简单例子展示了命令行的基本交互模式。
 
-### 命令帮助与文档系统
+#### 帮助与文档系统
 
 Linux 系统中，每个命令通常都配有详细的帮助文档。常用的查看方式包括 `man`、`info` 和 `--help` 选项。使用 `man` 命令，可以查看命令的完整手册页：
 
@@ -111,10 +81,6 @@ usage: ls [-@ABCFGHILOPRSTUWXabcdefghiklmnopqrstuvwxy1%,] [--color=when] [-D for
 ```
 
 通过这些工具，用户可以深入了解命令功能和用法，从而更高效地使用 Linux 系统。
-
-### 文件操作命令
-
-文件操作是 Linux 中最基础也是最常用的操作。接下来详细说明如何通过命令行浏览、复制、移动和删除文件。
 
 #### 目录与文件浏览
 
@@ -175,63 +141,9 @@ rm -r dir1/
 
 需要特别注意，`rm` 删除的文件通常无法恢复，因此务必谨慎使用。
 
-### 进程管理命令
-
-Linux 系统中，进程管理是监控系统状态和控制程序运行的重要手段。常用命令包括 `ps`、`top` 和 `kill`。
-
-#### 进程状态查看
-
-使用 `ps` 命令可以列出当前用户所有进程。例如：
-
-```bash
-ps -u $USER
-```
-
-运行后，将输出类似如下的信息：
-
-```plaintext
-  PID TTY          TIME CMD
- 1234 pts/0    00:00:00 bash
- 5678 pts/0    00:00:01 vim
- 9012 pts/0    00:00:00 ps
-```
-
-该命令输出当前用户下各进程的 PID、TTY、状态、CPU 占用等信息。另一命令 `top` 提供了实时的系统资源使用情况，显示 CPU、内存占用及所有运行进程：
-
-```bash
-top
-```
-
-运行后，将输出类似如下的信息：
-
-```plaintext
-top - 11:30:01 up 1 day, 1:23,  1 user,  load average: 0.00, 0.01, 0.05
-Tasks: 152 total,   1 running, 151 sleeping,   0 stopped,   0 zombie
-```
-
-在 `top` 界面中，用户可以通过按键进行操作。如 `q` 退出实时监控界面。按 `h` 可以查看帮助信息。
-
-#### 进程终止
-
-当某个进程出现异常或占用过多资源时，可以使用 `kill` 命令结束该进程。首先，通过 `ps` 或 `top` 查找进程的 PID，然后执行：
-
-```bash
-kill 1234
-```
-
-其中 `1234` 为进程的 PID。如果进程无法正常结束，可以使用更强制的信号：
-
-```bash
-kill -9 1234
-```
-
-信号 `-9` 表示强制终止，但可能导致数据丢失，因此应慎用。
-
-### 权限管理命令
+#### 权限管理命令
 
 权限管理是保证系统安全的重要措施。Linux 中通过设置读、写、执行权限来控制文件和目录的访问。虽然在后续章节中会进一步讨论安全策略，这里只介绍基本命令的用法。
-
-#### 修改文件权限与所有者
 
 使用 `chmod` 命令可以更改文件或目录的访问权限。例如，下面的命令将脚本文件设置为所有者具有全部权限，其他用户具有读和执行权限：
 
@@ -247,11 +159,7 @@ chown user:group file1.txt
 
 运行后，`file1.txt` 的所有者和组信息会更新为指定的用户和组。
 
-### 文件查看命令
-
-快速查看文件内容是日常运维中常用的操作。Linux 提供了多种工具以满足不同场景下的需求。
-
-#### 文件内容显示
+#### 文件内容查看
 
 `cat` 命令可以将文件的全部内容输出到终端。例如：
 
@@ -285,11 +193,24 @@ tail file1.txt
 
 ### 管道与重定向
 
-管道和重定向是 Linux 命令行中非常强大的工具，能够将多个命令组合起来，实现数据的快速处理和转化。
+Linux 中的每个进程默认都有三个数据流：标准输入（stdin）、标准输出（stdout）和标准错误（stderr）。这三个数据流为程序间通信和调试提供了基本手段。
 
-#### 管道与重定向基础
+- **标准输入 (`STDIN`)**：默认来自键盘输入，可通过重定向从文件中读取。
+- **标准输出 (`STDOUT`)**：默认输出到终端，可以重定向到文件。
+- **标准错误 (`STDERR`)**：用于输出错误信息，同样默认输出到终端，但可以单独重定向。
 
-管道符号 `|` 可将一个命令的输出直接传给另一个命令。例如，下列命令将 `ls -l` 的结果通过管道传递给 `grep` 命令，只筛选出包含 "txt" 的行：
+管道和重定向能够将多个命令的输入和输出等组合起来，实现数据的快速处理和转化。
+
+::: {.callout-tip}
+
+**Linux 哲学**
+
+Linux 强调简洁、模块化和"做一件事并做好它"。这种哲学要求每个工具只专注于单一功能，然后通过管道和组合构建出复杂系统。熟练掌握标准输入、输出和错误流的管理，有助于更好地理解和运用 Linux 命令行工具。
+
+:::
+
+
+管道符号 `|` 可将一个命令的标准输出直接传给另一个命令。例如，下列命令将 `ls -l` 的结果通过管道传递给 `grep` 命令，只筛选出包含 "txt" 的行：
 
 ```bash
 ls -l | grep txt
@@ -319,13 +240,12 @@ ls -l | grep txt
   ```
 
 - **错误输出重定向**  
-  使用 `2>` 将标准错误输出写入文件：
+  使用 `2>` 将标准错误输出写入文件，这将为调试和错误处理提供便利：
 
   ```bash
   ls non_existing_file 2> error.log
   ```
 
-#### 实战案例演示
 
 综合使用管道和重定向，可以完成许多复杂任务。下面的例子展示如何统计当前目录下所有 `.txt` 文件的总行数，并将结果保存到文件中：
 
@@ -335,7 +255,8 @@ cat *.txt | wc -l > total_lines.txt
 
 该命令先用 `cat *.txt` 拼接所有文本文件内容，再通过 `wc -l` 统计行数，最后将总行数写入 `total_lines.txt` 文件中。
 
-### 软件包管理（选讲）
+
+### 软件包管理
 
 软件包管理是 Linux 系统用于安装、更新和卸载软件的重要机制。不同的发行版使用不同的管理工具。例如，在 Debian 和 Ubuntu 系统中，常用 `apt` 命令管理软件包。下面是一个更新软件包列表并安装 Vim 编辑器的示例：
 
@@ -353,172 +274,7 @@ sudo yum install nano
 
 这些命令帮助系统管理员快速管理和维护系统中所需的软件，确保系统的安全与稳定。
 
-### 网络命令（扩展内容）
-
-网络命令用于诊断和管理网络连接。在 Linux 中，常见的网络命令有 `ping`、`ifconfig`/`ip`、`netstat` 等。例如，使用 `ping` 命令可以测试与某一主机之间的连通性：
-
-```bash
-ping -c 4 www.google.com
-```
-
-该命令向 `www.google.com` 发送 4 个 ICMP 请求，并显示响应时间和丢包率。使用 `ip addr`（或 `ifconfig`）命令可以查看系统中各网络接口的状态：
-
-```bash
-ip addr
-```
-
-运行后，将输出类似如下的信息：
-
-```plaintext
-1: lo: <LOOPBACK,UP,LOWER_UP> mtu 65536 qdisc noqueue state UNKNOWN group default qlen 1000
-    link/loopback 00:00:00:00:00:00 brd 00:00:00:00:00:00
-    inet 127.0.0.1/8 scope host lo
-       valid_lft forever preferred_lft forever
-2: eth0: <BROADCAST,MULTICAST,UP,LOWER_UP> mtu 1500 qdisc fq_codel state UP group default qlen 1000
-    link/ether 00:15:5d:01:ca:05 brd ff:ff:ff:ff:ff:ff
-    inet 192.168.1.100/24 brd 192.168.1.255 scope global dynamic eth0
-       valid_lft 86379sec preferred_lft 86379sec
-```
-
-这里显示了系统的所有网络接口，包括回环接口 `lo` 和有线连接的 `eth0`。
-
-
-`netstat` 命令则显示系统当前的网络连接和监听端口：
-
-```bash
-netstat -tuln
-```
-
-这对了解系统上运行的网络服务非常有用。
-
-
-## 环境变量与标准流管理
-
-### 环境变量管理
-
-环境变量在 Linux 中用于存储系统和用户的配置信息，并影响程序的运行行为。熟悉环境变量的管理，对于定制工作环境和编写脚本具有重要意义。
-
-#### 环境变量基础
-
-环境变量是一种存储在系统内存中的键值对，用于配置程序运行时的参数。常见的环境变量包括 `PATH`（定义可执行文件搜索路径）、`HOME`（当前用户的主目录）以及 `USER`（当前用户名）。
-
-#### 常见环境变量
-
-例如，可以使用下面的命令查看 `PATH` 环境变量，了解系统搜索命令时所依赖的路径：
-
-```{bash}
-echo $PATH
-```
-
-执行后，将输出类似如下的信息，表示系统搜索命令时所依赖的路径：
-
-```plaintext
-/usr/local/sbin:/usr/local/bin:/usr/sbin:/usr/bin:/sbin:/bin:/usr/games:/usr/local/games
-```
-
-类似地，使用下列命令可以查看用户主目录：
-
-```{bash}
-echo $HOME
-```
-
-运行后，将输出类似如下的信息，表示用户主目录：
-
-```plaintext
-/home/username
-```
-
-#### 环境变量设置方式
-
-环境变量可以临时设置，也可以永久保存。临时设置只在当前会话中有效，例如：
-
-```{bash}
-export MY_VAR="HelloWorld"
-echo $MY_VAR
-```
-
-运行后，将输出类似如下的信息，表示环境变量设置成功：
-
-```plaintext
-HelloWorld
-```
-
-#### 使用技巧
-
-合理配置环境变量可以简化日常操作。例如，将常用命令路径加入 `PATH` 中，可以免去输入全路径的麻烦；定义个性化变量还能在脚本中实现灵活控制。掌握环境变量管理，有助于提升命令行操作效率。
-
-### 标准输入、标准输出、标准错误
-
-Linux 中的每个进程默认都有三个数据流：标准输入（stdin）、标准输出（stdout）和标准错误（stderr）。这三个数据流为程序间通信和调试提供了基本手段。
-
-#### 基本概念
-
-- **标准输入 (stdin)**：默认来自键盘输入，可通过重定向从文件中读取。
-- **标准输出 (stdout)**：默认输出到终端，可以重定向到文件。
-- **标准错误 (stderr)**：用于输出错误信息，同样默认输出到终端，但可以单独重定向。
-
-#### 重定向与管道实战
-
-重定向允许用户将输入和输出从默认的设备转移。例如，将标准输出保存到文件：
-
-```bash
-echo "This is a test" > output.txt
-```
-
-或将错误信息重定向到另一个文件：
-
-```bash
-ls non_existent_file 2> error.txt
-```
-
-管道符 `|` 则将一个命令的输出传给另一个命令进行处理，例如：
-
-```bash
-cat file1.txt | grep "keyword"
-```
-
-这样可以从 `file1.txt` 中筛选出包含 "keyword" 的行。
-
-#### 错误流处理技巧
-
-在一些调试场景中，我们希望将标准输出和错误输出同时保存到一个文件中，可以使用如下语法：
-
-```bash
-command > output.txt 2>&1
-```
-
-这会将标准输出和标准错误都写入 `output.txt` 中，方便后续分析和问题定位。
-
-
-## 命令组合与 Shell 脚本
-
-### 命令组合技巧
-
-在实际工作中，经常需要将多个命令组合起来实现更复杂的任务。Linux 提供了几种命令组合符，最常用的有分号（;）、逻辑与（&&）和逻辑或（||）。
-
-- 使用分号 `;` 可以顺序执行多个命令，即使前一个命令失败也不会影响后续命令的执行：
-
-  ```bash
-  echo "First command"; echo "Second command"
-  ```
-
-- 逻辑与 `&&` 用于前一个命令成功后才执行下一个命令，例如：
-
-  ```bash
-  mkdir new_dir && cd new_dir
-  ```
-
-  只有当目录 `new_dir` 成功创建后，才会进入该目录。
-
-- 逻辑或 `||` 则在前一个命令失败时执行后续命令，如：
-
-  ```bash
-  false || echo "Previous command failed"
-  ```
-
-  由于 `false` 命令总是返回失败，因此会输出提示信息。
-
-### 基本 Shell 脚本编写
+### 编写 Shell 脚本
 
 Shell 脚本是一系列命令的集合，用于自动化日常任务。脚本文件通常以 `.sh` 结尾，并以 Shebang（`#!/bin/bash`）开头，指明解释器路径。例如，一个简单的脚本如下：
 
@@ -592,44 +348,6 @@ done
 执行该脚本后，系统会自动创建 `backup` 目录（如果不存在），并将所有日志文件复制过去，同时输出备份过程的详细信息。
 
 
-## Linux 安全与权限管理
-
-Linux 系统的安全性依赖于用户、组、文件权限以及临时提升权限等管理措施。下面介绍常用的用户与组管理命令、文件权限管理以及 `sudo` 的基本使用。
-
-### 用户与组管理
-
-#### 用户管理命令
-
-在 Linux 系统中，每个用户都有唯一的用户名和 UID。使用 `useradd` 命令可以添加新用户，例如：
-
-```bash
-sudo useradd newuser
-```
-
-添加后，通过 `passwd` 命令为该用户设置密码：
-
-```bash
-sudo passwd newuser
-```
-
-系统会提示输入并确认密码，确保 `newuser` 能够正常登录。
-
-#### 组管理基础
-
-Linux 使用组来管理多个用户的权限。使用 `groupadd` 可以创建新组：
-
-```bash
-sudo groupadd newgroup
-```
-
-之后，通过 `usermod` 命令将用户加入组中：
-
-```bash
-sudo usermod -aG newgroup newuser
-```
-
-这样，`newuser` 就会成为 `newgroup` 的成员，从而获得该组设定的权限。
-
 ### 文件与目录权限管理
 
 Linux 文件权限通过读（r）、写（w）、执行（x）三个标志进行管理。使用 `ls -l` 命令可以查看文件和目录的权限设置：
@@ -667,69 +385,224 @@ sudo apt update
 
 该命令会以管理员身份更新软件包列表。`sudo` 的配置通常保存在 `/etc/sudoers` 文件中，正确配置可以防止滥用并保证系统安全。
 
-## 扩展内容
 
-### 趣味性内容与名人轶事
+::: {.callout-tip}
 
-Linux 的发展充满了有趣的故事和人物轶事，这些内容不仅展示了技术进步的历程，也激励了无数开发者。
+**ZSH**
 
-#### Linus Torvalds 的故事
+Linux 系统默认使用 Bash 作为 Shell 解释器，但也有其他 Shell 可供选择。例如，Zsh 是一种功能强大的 Shell，提供了更多的自定义选项和插件支持。Zsh 具有的一些独有特性包括：
 
-Linus Torvalds 是 Linux 内核的创始人，他在 1991 年开始开发 Linux，从最初的个人项目发展为今天全球数百万服务器、桌面及嵌入式系统的基础。Torvalds 以其直率和对开源理念的坚持，在技术社区中赢得了广泛赞誉。他的经历展示了个人热情和协作精神如何改变整个软件行业。
+- 智能补全：支持更多的补全选项和提示功能。例如，输入 `ls /u/g/b` 后按 `Tab` 键，Zsh 会自动补全为 `ls /usr/global/back`。
+- 插件支持：Zsh 支持丰富的插件系统，用户可以根据需求安装和配置各种插件，扩展 Shell 功能。例如，`oh-my-zsh` 是一个流行的 Zsh 配置框架，提供了许多主题和插件。
+- 高级别别名：Zsh 支持更复杂的别名和函数定义，使得用户可以更灵活地定制 Shell 命令。例如，可以使用 `alias` 命令定义更复杂的别名，如 `alias ll='ls -l'`。
+- 高级别历史记录：Zsh 提供了更强大的历史记录功能，支持更多的历史命令操作和搜索选项。例如，可以使用 `Ctrl+R` 快捷键搜索历史命令。
+- 高级别参数展开：Zsh 支持更多的参数展开选项，如 `~` 展开为用户主目录、`$var` 展开为变量值等。
 
-#### Git 的诞生与发展
+:::
 
-Git 由 Linus Torvalds 为管理 Linux 内核源代码而开发，现已成为最流行的分布式版本控制系统。Git 的高效性能和强大功能不仅革新了代码管理方式，也推动了开源项目的蓬勃发展。Git 的成功故事充分展示了开源协作的力量和技术创新的魅力。
+## PowerShell 命令行
 
-#### Linux 幽默与开发趣事
+Shell 命令行在 Linux、MacOS 中得到广泛应用，而在 Windows 系统中，PowerShell 是主要的命令行工具。PowerShell 是一种脚本语言和命令行解释器，具有强大的脚本编写和系统管理功能，适用于 Windows 系统的管理和自动化。
 
-在 Linux 社区中，经常流传着各种幽默段子和趣事，如命令行高手如何用单行命令解决复杂问题，或是对 "一切皆文件" 设计理念的调侃。这些趣味性内容不仅缓解了技术学习的枯燥，也彰显了开发者们对技术极致追求的乐观与幽默。
+PowerShell 命令行与 Linux Shell 有许多相似之处，例如：
+
+- **基本命令**：PowerShell 支持常见的文件和目录操作，如 `cd`、`ls`、`mkdir`、`rm` 等。
+- **管道和重定向**：PowerShell 支持管道和重定向，可以将命令的输出传递给其他命令或文件。
+- **脚本编写**：PowerShell 脚本使用 `.ps1` 扩展名，可以编写复杂的脚本和自动化任务。
 
 
-### Linux 概述与背景
+一些常用的 PowerShell 命令包括：
 
-#### Linux 的起源与发展
+- **获取当前目录**：使用 `Get-Location` 命令获取当前目录的路径，例如：
 
-Linux 的历史可以追溯到 1991 年，当时 Linus Torvalds 开始开发一个基于 Minix 的操作系统内核。经过全球开发者的共同努力，Linux 逐渐发展为一个成熟、稳定且功能强大的操作系统内核。Linux 的成功证明了开源协作的巨大潜力，并在此基础上衍生出各种发行版，广泛应用于服务器、移动设备及嵌入式系统。
+  ```powershell
+  Get-Location
+  ```
 
-#### 开放源码与 Linux 社区
+- **列出目录内容**：使用 `Get-ChildItem` 命令列出当前目录的文件和子目录，例如：
 
-Linux 内核及其应用程序均采用开放源码模式，这使得任何人都可以自由查看、修改和分发代码。全球开发者通过邮件列表、代码仓库和论坛紧密协作，推动了 Linux 的快速发展。开放源码文化不仅促进了技术创新，也建立了一个互助、透明的社区环境。
+  ```powershell
+  Get-ChildItem
+  ```
 
-#### Linux 哲学 与 Unix 哲学
+- **创建目录**：使用 `New-Item` 命令创建新目录，例如：
 
-Linux 继承了 Unix 的设计理念，强调简洁、模块化和"做一件事并做好它"。这种哲学要求每个工具只专注于单一功能，然后通过管道和组合构建出复杂系统。Unix 的设计理念深刻影响了 Linux 的架构，使其既灵活又易于维护，并成为许多现代操作系统设计的基础。
+  ```powershell
+  New-Item -ItemType Directory -Name NewFolder
+  ```
 
-### 操作系统的演变与 Unix 的渊源
+- **删除文件**：使用 `Remove-Item` 命令删除文件或目录，例如：
 
-#### Unix 的诞生与发展
+  ```powershell
+  Remove-Item file.txt
+  ```
 
-Unix 系统最初由 AT&T 贝尔实验室开发，受到 Multics 项目的启发而产生。Ken Thompson 与 Dennis Ritchie 是 Unix 的主要设计者，他们提出的简洁、高效的设计理念奠定了现代操作系统的基础。Unix 的出现开创了多用户、多任务系统的新纪元，并成为后续操作系统设计的重要参考。
+- **复制文件**：使用 `Copy-Item` 命令复制文件或目录，例如：
 
-#### Unix 对现代操作系统的影响
+  ```powershell
+  Copy-Item file1.txt file2.txt
+  ```
 
-从 Unix 出发，Linux、BSD 以及 macOS 等操作系统都继承了其许多核心概念，如文件系统层次结构、权限管理和命令行操作。Unix 的设计哲学强调工具链的组合，促使现代系统以小而精的工具实现复杂任务，形成了当今流行的微服务和模块化开发理念。
+PowerShell 是为了取代 Windows 系统中最早的命令提示符程序（`cmd.exe`）而开发的。对标的是 Linux 系统的 Shell。然而，PowerShell 实际上用得非常有限。现在，即便在 Windows 系统上，也可以使用 WSL（Windows Subsystem for Linux）来运行 Linux Shell，这样可以更方便地使用 Linux 系统的命令行工具。
 
-#### Unix 与 Linux 的关系
+## Conda 命令行
 
-虽然 Linux 并非 Unix 的直接分支，但它借鉴了 Unix 的许多设计思想。两者在命令行工具、文件结构以及权限机制上有很多相似之处，这使得掌握 Unix 基本原理对理解 Linux 非常有帮助。但同时，两者在内核设计和许可协议上存在差异，这也是 Linux 能够迅速发展的一个原因。
+Conda 是一个流行的包管理工具，用于创建、管理和分享软件环境。通过 Conda，用户可以轻松安装 Python 包、R 包和其他软件，实现不同环境的隔离和管理。
 
-#### Unix 与现代操作系统之间的联系
+一些常见的 Conda 命令包括：
 
-Unix 的影响不仅体现在 Linux 上，也在 macOS、BSD 系统中得到延续。现代操作系统在设计时往往吸收 Unix 的精髓，同时根据自身需求做出适当调整，从而兼顾了稳定性、易用性和现代化功能。
+### 环境管理
 
-##### macOS 与 Unix 的关系
+- **创建环境**：使用 `conda create` 命令创建新环境，例如：
 
-macOS 基于 Darwin 操作系统，其内核和许多底层工具均源自 Unix。macOS 在保留 Unix 强大命令行操作的同时，还集成了图形用户界面，提供了更加友好的用户体验。
+  ```bash
+  conda create --name myenv python=3.8
+  ```
 
-##### BSD 与 Unix 的关系
+- **激活环境**：使用 `conda activate` 命令激活环境，例如：
 
-BSD 系统（如 FreeBSD、OpenBSD）直接衍生自 Unix，注重安全性和稳定性。许多服务器、网络设备和嵌入式系统采用 BSD 作为操作系统，体现了 Unix 设计的经典魅力。
+  ```bash
+  conda activate myenv
+  ```
 
-##### Linux 与 Unix 的关系
+- **查看可用环境**：使用 `conda env list` 命令查看所有可用环境，例如：
 
-Linux 在很多方面与 Unix 保持高度一致，例如文件系统结构和命令行工具，但又独立发展出自己的内核架构和开源模式。理解 Unix 的基本原理，可以帮助用户更好地掌握 Linux 系统管理和开发。
+  ```bash
+  conda env list
+  ```
 
-### Unix 的哲学与设计理念
+- **退出环境**：使用 `conda deactivate` 命令退出当前环境，例如：
 
-Unix 的设计哲学主张"做一件事并做好它"，强调将复杂问题拆分为简单的小模块，每个模块只负责一个功能。这种思想促使 Linux 和其他现代系统构建起灵活且可组合的工具链。通过管道和重定向，多个小程序可以组合完成复杂任务，而这种模块化设计也使得系统更容易维护和扩展。
+  ```bash
+  conda deactivate
+  ```
+
+- **导出环境**：使用 `conda env export` 命令导出环境配置，例如：
+
+  ```bash
+  conda env export > environment.yml
+  ```
+
+- **导入环境**：使用 `conda env create` 命令导入环境配置，例如：
+
+  ```bash
+  conda env create -f environment.yml
+  ```
+
+### 软件包管理
+
+- **安装软件包**：使用 `conda install` 命令安装软件包，例如：
+
+  ```bash
+  conda install numpy
+  ```
+
+- **删除软件包**：使用 `conda remove` 命令删除软件包，例如：
+
+  ```bash
+  conda remove numpy
+  ```
+
+- **更新软件包**：使用 `conda update` 命令更新软件包，例如：
+
+  ```bash
+  conda update numpy
+  ```
+
+- **查看已安装软件包**：使用 `conda list` 命令查看已安装的软件包，例如：
+
+  ```bash
+  conda list
+  ```
+
+## Git 命令行
+
+Git 是一个分布式版本控制系统，广泛用于协作开发和代码管理。通过 Git，用户可以追踪文件的变更、协同工作、回滚历史版本等。
+
+在 Git 终端中，常用的命令包括：
+
+### 仓库管理
+
+- **初始化仓库**：使用 `git init` 命令初始化新仓库，例如：
+
+  ```bash
+  git init
+  ```
+
+- **克隆仓库**：使用 `git clone` 命令克隆远程仓库，例如：
+
+  ```bash
+  git clone https://github.com/user/repo.git
+  ```
+
+### 追踪更改
+
+- **添加文件**：使用 `git add` 命令添加文件到暂存区，例如：
+
+  ```bash
+  git add file.txt
+  ```
+
+- **提交更改**：使用 `git commit` 命令提交更改到仓库，例如：
+
+  ```bash
+  git commit -m "Add file.txt"
+  ```
+
+- **查看状态**：使用 `git status` 命令查看仓库状态，例如：
+
+  ```bash
+  git status
+  ```
+
+- **查看历史**：使用 `git log` 命令查看提交历史，例如：
+
+  ```bash
+  git log
+  ```
+
+- **拉取更新**：使用 `git pull` 命令拉取远程更新，例如：
+
+  ```bash
+  git pull origin main
+  ```
+
+- **推送更改**：使用 `git push` 命令推送更改到远程仓库，例如：
+
+  ```bash
+  git push origin main
+  ```
+
+### 分支管理
+
+- **创建分支**：使用 `git branch` 命令创建新分支，例如：
+
+  ```bash
+  git branch feature
+  ```
+
+- **切换分支**：使用 `git checkout` 命令切换分支，例如：
+
+  ```bash
+  git checkout feature
+  ```
+
+- **合并分支**：使用 `git merge` 命令合并分支，例如：
+
+  ```bash
+  git merge feature
+  ```
+
+- **删除分支**：使用 `git branch -d` 命令删除分支，例如：
+
+  ```bash
+  git branch -d feature
+  ```
+
+- **查看分支**：使用 `git branch` 命令查看分支列表，例如：
+
+  ```bash
+  git branch
+  ```
+
+
